# thelastmen

./: README.md  docker-compose.yml  dprint.json
crawler/: Cargo.toml  Dockerfile  Justfile
crawler/src/: main.rs
database/: Dockerfile.migrate  Justfile
database/migrations/: 20241012174705_init.sql
website/: Justfile  astro.config.mjs  astro.config.ts  bun.lockb  package.json  tailwind.config.mjs  tailwind.config.ts  wrangler.toml
website/src/: Layout.astro  articles.ts  env.d.ts
website/src/pages/: index.astro
website/src/pages/articles/: [slug].astro
