[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
config = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
rss = "2.0"
select = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.40", features = ["rt", "time", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
